# wb_competitors

./: .pre-commit-config.yaml  README.md  docker-compose.yml  dump.rdb  pyproject.toml
backend/: Dockerfile  manage.py  pyproject.toml
backend/backend/: asgi.py  celery.py  settings.py  urls.py
backend/competitors/: api.py  consumers.py  routing.py  tasks.py  urls.py  utils.py  views.py
backend/competitors/templates/competitors/: index.html
backend/competitors/templatetags/: custom_filters.py
backend/templates/: base.html
