[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["codarsssss <codarsssss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
celery = "^5.3.6"
redis = "^5.0.2"
pre-commit = "^3.6.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
